--- a/Dash_Viz.ipynb
+++ b/Dash_Viz.ipynb
@@ -3,16 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<center>\n",
-    "    <img src=\"https://gitlab.com/ibm/skills-network/courses/placeholder101/-/raw/master/labs/module%201/images/IDSNlogo.png\"  width=\"300\" alt=\"cognitiveclass.ai logo\"  />\n",
-    "</center>\n",
-    "\n",
-    "<h1 align=center><font size = 5>Assignment: Dash Notebook for Peer Assignment</font></h1>\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Dashboard Code: (Works on my local IDE but for some reason it can't run on Jupyter)\n",
-    "\n"
+    "<center>\r\n",
+    "    <img src=\"https://gitlab.com/ibm/skills-network/courses/placeholder101/-/raw/master/labs/module%201/images/IDSNlogo.png\"  width=\"300\" alt=\"cognitiveclass.ai logo\"  />\r\n",
+    "</center>\r\n",
+    "\r\n",
+    "<h1 align=center><font size = 5>Assignment: Dash Notebook for Peer Assignment</font></h1>\r\n",
+    "\r\n",
+    "\r\n"
    ],
    "metadata": {}
   },
